# goldylox

./: .gitignore  ARCHITECTURE.md  ARC_ELIMINATION.md  CANONICALIZATION.md  Cargo.toml  DELETED_telemetry_metrics.rs  DELETED_telemetry_metrics_collector.rs  ERROR_ANALYSIS.md  FUNCTION_SPECIFICATIONS.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_FIX.md  STUB_REMOVAL_SUMMARY.md  analyze_duplicates.sh  bincode_errors.txt  build.rs  compilation_errors.txt  compilation_errors_full.txt  compilation_output.txt  current_check_output.txt  current_errors.txt  error_analysis.md  error_analysis.txt  error_reduction_summary.md  error_summary.txt  errors.txt  test_enable_methods.rs  warning_database.json  warning_inventory_raw_sample.txt
DELEGATION_CLEANUP/: MILESTONE_TASK_STRUCTURE_VALIDATION.md
DELEGATION_CLEANUP/0_Warning_Inventory_Categorization/: 0_generate_comprehensive_warning_inventory.md  1_categorize_warning_patterns.md  2_apply_integration_chain_analysis.md  3_apply_architecture_pattern_recognition.md  4_classify_false_positive_vs_dead_code.md  5_create_warning_database.md  6_identify_research_gaps.md
DELEGATION_CLEANUP/0_Warning_Inventory_Categorization/deliverables/: analysis_priority_ranking.md  architecture_pattern_analysis.md  compiler_limitation_analysis.md  database_query_examples.md  database_schema.md  false_positive_classification.md  final_warning_classification.md  generate_warning_database.py  integration_chain_analysis.md  milestone_assignments.md  research_gaps_inventory.md  warning_categories.md  warning_database_summary.md  warning_inventory_structured.md  warning_summary.md  warning_summary_report.md
DELEGATION_CLEANUP/1_Broken_Code_Fixes/: 0_fix_prefetch_stats_construction.md  1_fix_recovery_strategy_index_delegation.md  2_fix_alert_thresholds_type_confusion.md  3_fix_cache_padded_array_access.md  4_replace_unstable_once_cell_usage.md  5_remove_factory_function_bloat.md
DELEGATION_CLEANUP/2_False_Positive_Analysis/: 0_document_mesi_protocol_false_positives.md  1_document_ml_system_false_positives.md  2_document_statistics_telemetry_false_positives.md  3_research_additional_false_positive_patterns.md  4_create_comprehensive_suppression_strategy.md
DELEGATION_CLEANUP/2_False_Positive_Analysis/deliverables/: additional_false_positive_patterns.md  comprehensive_suppression_strategy.md  mesi_protocol_false_positives.md  ml_system_false_positives.md  statistics_telemetry_false_positives.md
DELEGATION_CLEANUP/3_Integration_Verification/: 0_verify_mesi_communication_integration.md  1_verify_ml_feature_extraction_integration.md  2_verify_statistics_collection_integration.md  3_document_complex_integration_patterns.md  4_validate_integration_evidence.md
DELEGATION_CLEANUP/3_Integration_Verification/deliverables/: architectural_pattern_guidelines.md  compiler_limitation_analysis.md  complex_integration_patterns.md  component_statistics_validation.md  integration_best_practices.md  integration_confidence_assessment.md  integration_evidence_validation.md  integration_pattern_knowledge_base.md  integration_verification_methodology.md  integration_verification_summary.md  mesi_functional_evidence.md  mesi_integration_confirmation.md  mesi_integration_test_scenarios.md  mesi_integration_verification.md  ml_feature_usage_validation.md  ml_integration_confirmation.md  ml_integration_test_scenarios.md  ml_integration_verification.md  ml_performance_impact_analysis.md  statistics_integration_confirmation.md  statistics_integration_verification.md  telemetry_data_flow_analysis.md  unified_statistics_testing.md  verification_gaps_analysis.md  verification_methodology_assessment.md
DELEGATION_CLEANUP/4_Warning_Suppression/: 0_implement_systematic_suppression.md  1_document_suppression_rationale.md  2_create_suppression_guidelines.md  3_monitor_warning_reduction_progress.md  4_quality_assurance_suppression_implementation.md
DELEGATION_CLEANUP/5_Validation_Quality_Assurance/: 0_validate_clean_compilation.md  1_comprehensive_functionality_validation.md  2_create_systematic_approach_documentation.md  3_establish_maintenance_framework.md
TURD/2_statistics_telemetry/: 0_review_statistics_infrastructure.md  1_connect_hit_miss_tracking.md  2_test_statistics_integration.md  3_remove_hardcoded_zeros.md
assets/: goldylox.icns
docs/: ACTOR_MESSAGES.md  MAINTENANCE_GUIDELINES.md
examples/: base_operations.rs  cache_magic_demo.rs  coherence_demo.rs  comprehensive_validation.rs  debug_cache.rs  debug_cold_tier.rs  ecommerce.rs  ecommerce_example.rs  goldylox.rs  hash_test.rs  metrics_dashboard.rs  ml_visualization.rs  quick_test.rs  real_cache_usage.rs  realistic_ecommerce.rs  simple_demo.rs  simple_test.rs  test_cache_fix.rs  test_minimal.rs  workload_simulator.rs
examples/ecommerce/: display.rs  mod.rs  seeding.rs  setup.rs  types.rs  workloads.rs
examples/support/: workload_simulator.rs
src/: goldylox.rs  lib.rs  prelude.rs
src/cache/: mod.rs  sync_wrapper.rs
src/cache/analyzer/: access_record.rs  analyzer_core.rs  mod.rs  pattern_detection.rs  types.rs  utilities.rs
src/cache/async_channel/: mod.rs
src/cache/coherence/: communication.rs  data_structures.rs  mod.rs  state_management.rs
src/cache/config/: global.rs  loader.rs  mod.rs  presets.rs  types.rs  validator.rs
src/cli/: commands.rs  config.rs  daemon_detection.rs  daemon_manager.rs  errors.rs  http_client.rs  mod.rs  output.rs  repl.rs
src/daemon/: cli.rs  config.rs  installer.rs  ipc.rs  manager.rs  mod.rs  process.rs  signals.rs
src/telemetry/: alert_system.rs  alerts.rs  data_structures.rs  history.rs  metrics.rs  metrics_collector.rs  mod.rs  monitor.rs  performance_history.rs  statistics.rs  trend_analyzer.rs  trends.rs  types.rs  unified_stats.rs
task/: CLEANUP_1.md  CLEANUP_2.md  COMPACT_1.md  FAILOVR_1.md  POOLFIX_2.md  POOLFIX_3.md  STATFIX_1.md  STATFIX_2.md  STATFIX_3.md  STATIC_10.md  STUB_1.md  STUB_2.md  STUB_3.md  STUB_4.md  STUB_5.md
tests/: analyzer_generic_test.rs  config_parsing_test.rs  memory_detection_test.rs  memory_monitor_panic_tests.rs  memory_pressure_integration_test.rs
(+286 files in other folders)
