[package]
name = "goldylox"
version = "0.1.0"
edition = "2024"
authors = ["David Maple<david@cloudsamur.ai>"]
description = "High-performance generic cache system with multi-tier architecture, SIMD optimizations, and intelligent eviction policies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyrup-ai/goldylox"
keywords = ["cache", "performance", "simd", "async", "generic"]
categories = ["caching", "data-structures", "algorithms"]

[dependencies]
# Core dependencies for atomic operations and concurrency
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-skiplist = "0.1"
crossbeam-utils = "0.8"
crossbeam-epoch = "0.9.18"
parking_lot = "0.12"
arc-swap = "1.7"
rand = "0.9"

# SIMD and performance optimizations
rayon = "1.11"

# Async support
tokio = { version = "1", features = ["sync", "time", "rt"], optional = true }

# Serialization for cold tier and configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = "1.0"
bincode = { version = "2", features = ["derive", "alloc", "std"] }

# Compression for cold tier
lz4_flex = "0.11"
zstd = "0.13"
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
snap = "1"
brotli = "8"
crc32fast = "1"

# Memory management and metrics
memmap2 = { version = "0.9", features = ["stable_deref_trait"] }
arrayvec = "0.7.6"
dashmap = "6.1.0"
ahash = "0.8.12"
rustc-hash = "2"
blake3 = "1"
siphasher = "1.0"
log = "0.4.27"
unicode-bidi = "0.3.18"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_System_SystemInformation"] }
unicode-script = "0.5.7"
serde_json = "1"
crossbeam-deque = "0.8.6"
futures-lite = "2.6.1"
nix = { version = "0.30.1", features = ["sched"] }

[features]
default = []
async = ["tokio"]

# Platform-specific dependencies for memory detection
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi"] }

[dev-dependencies]
criterion = "0.7"
proptest = "1.7"
tokio-test = "0.4"
